syntax = "proto3";

message NewUserData{
    string user_name = 1;
    string user_password = 2;
    string user_phone_number = 3;
    string user_status = 4;
}

message OldUserData{
    string user_name = 1;
    string user_password = 2;
}

message CustomerProductData{
    string customer_product_type = 1;
    string customer_note = 2;
}

message SellerProductData{
    string customer_product_type = 1;
}

message MessageToServer{
    oneof StructMessageToServer{
        NewUserData new_user_data = 1;
        OldUserData old_user_data = 2;
        CustomerProductData customer_product_data = 3;
        SellerProductData seller_product_data = 4;
    }
}

message MessageToCustomer{
    oneof StructMessageToCustomer{
       ServerError server_error = 1;
       ServerSuccess success = 2;
    }
}

message MessageToSeller{
    oneof StructMessageToSeller{
        ServerError server_error = 1;
        ListRelevantCustomerData list_relevant_customer_data = 2;
    }
}

message ServerError{
    string error_message = 1;
}

message ServerSuccess{
    string additional_information = 1;
}

message ListRelevantCustomerData{
    repeated CustomerProductData relevant_customers = 1;
}
